# game

./: .clang-format  CMakeLists.txt  Player.cpp  Player.h  RAGDOLL_TESTING_GUIDE.md  README.md  build_run.sh  main  main.cpp  quick_test.sh
include/: BodyPart.h  Character.h  CubeObject.h  Enemy.h  GameObject.h  GameUI.h  GameWorld.h  ItemPickup.h  ModelObject.h  Physics.h  Player.h  Weapon.h  inputFunctions.h
include/ai/: NPC.h  NPCChatSystem.h  NPCManager.h  NPCStates.h  NavMesh.h
include/entities/: AdvancedPlayerController.h  FullRagdoll.h  HumanoidCharacter.h  Player.h  RobloxStylePlayer.h  SimpleRagdoll.h
include/exceptions/: CollisionException.h  GameException.h  GameExceptions.h  GameInitException.h  ResourceException.h
include/game/: FruitShopGame.h
include/objects/: CubeObject.h  Floor.h  GameObject.h  InteractiveBrick.h  MovingCubeObject.h  RotatingCubeObject.h  ScalingCubeObject.h  Sphere.h  StaticWorldObject.h  Wall.h
include/settings/: Physics.h
include/shop/: Fruit.h  Shelf.h  Shop.h
include/systems/: InputSystem.h  PhysicsSystem.h  ShaderSystem.h
include/utils/: Fruit.h  GameObjectManager.h  Storage.h
resources/: lighting.fs  lighting.vs
scripts/: setup_dependencies.sh
src/: BodyPart.cpp  Character.cpp  CubeObject.cpp  Enemy.cpp  GameObject.cpp  GameUI.cpp  GameWorld.cpp  ItemPickup.cpp  ModelObject.cpp  Player.cpp  Weapon.cpp  inputFunctions.cpp  main.cpp
src/ai/: NPC.cpp  NPCChatSystem.cpp  NPCManager.cpp  NPCStates.cpp  NavMesh.cpp
src/entities/: AdvancedPlayerController.cpp  FullRagdoll.cpp  HumanoidCharacter.cpp  Player.cpp  Player_CompoundSolution.cpp.backup  RobloxStylePlayer.cpp  SimpleRagdoll.cpp
src/game/: FruitShopGame.cpp
src/objects/: CubeObject.cpp  Floor.cpp  GameObject.cpp  MovingCubeObject.cpp  RotatingCubeObject.cpp  ScalingCubeObject.cpp  Sphere.cpp  StaticWorldObject.cpp  Wall.cpp
src/shop/: Fruit.cpp  Shelf.cpp  Shop.cpp
src/systems/: InputSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  ShaderSystem.cpp
src/utils/: GameObjectManager.cpp  Storage.cpp
